network_deployment/network.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Defines network infrastructure for ExpenseTracker.",
	"Parameters": {
		"VPC": {
			"Description": "Just select the one and only default VPC",
			"Type": "AWS::EC2::VPC::Id"
		},
		"Subnet": {
			"Description": "Just select one of the available subnets",
			"Type": "AWS::EC2::Subnet::Id"
		},
		"SubnetTwo": {
			"Description": "Just select one of the available subnets",
			"Type": "AWS::EC2::Subnet::Id"
		}
	},
	"Resources": {
		"ApplicationSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Application Server security group",
				"VpcId": {"Ref": "VPC"},
				"SecurityGroupIngress": [{
					"CidrIp": "0.0.0.0/0",
					"FromPort": 22,
					"IpProtocol": "tcp",
					"ToPort": 22
				},
				{
					"CidrIp": "0.0.0.0/0",
					"FromPort": 8080,
					"IpProtocol": "tcp",
					"ToPort": 8080
				}]
			}
		},
		"DBSecurityGroup": {
			"Type": "AWS::RDS::DBSecurityGroup",
			"Properties": {
				"EC2VpcId" : { "Ref": "VPC" },
				"DBSecurityGroupIngress" : [ {
					"EC2SecurityGroupId": {"Ref": "ApplicationSecurityGroup"}
				}],
				"GroupDescription" : "Allow access from App Servers"
			}
		}, 
		"DBSubnetGroup": {
			"Type": "AWS::RDS::DBSubnetGroup",
			"Properties": {
				"DBSubnetGroupDescription": "Database subnet group",
				"SubnetIds" : [ 
					{"Ref": "Subnet"},
					{"Ref": "SubnetTwo"}
				]
			}
		},
		"AlarmTopic": {
			"Type" : "AWS::SNS::Topic",
			"Properties" : {
				"DisplayName" : "AlarmTopic",
				"Subscription" : [ {
					"Endpoint" : "aprosikhin@gmail.com",
					"Protocol" : "email"
				}]
			}
		}
	},
	"Outputs": {
		"ApplicationSecurityGroup": {
			"Value": {"Ref": "ApplicationSecurityGroup"},
			"Description": "Application Security Group"
		},
		"DatabaseSecurityGroup": {
			"Value": {"Ref": "DBSecurityGroup"},
			"Description": "Database Security Group"
		},
		"DatabaseSubnetGroup": {
			"Value": {"Ref": "DBSubnetGroup"},
			"Description": "Database Subnet Group"
		},
		"SubnetOne": {
			"Value": {"Ref": "Subnet"},
			"Description": "First subnet"
		},
		"SubnetTwo": {
			"Value": {"Ref": "SubnetTwo"},
			"Description": "Second subnet"
		},
		"AlarmTopic": {
			"Value": {"Ref": "AlarmTopic"},
			"Description": "Alarm Topic for sending alerts"
		}
	}
}
